--- a/fitness.html
+++ b/fitness.html
@@ -8,6 +8,12 @@
          <link rel="stylesheet" type="text.css" href="styles.css">
     </head>
     <body>
+        <nav>
+            <a href="#">HTML</a> |
+            <a href="#">CSS</a> |
+            <a href="#">JavaScript</a> |
+            <a href="#">Python</a>
+          </nav>
         
     </body>
 </html>
